--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 	<head>
 		<meta charset="utf-8">
 		<title></title>
-		<link rel="stylesheet" href="style.css">
+		<link id="stylesheet" rel="stylesheet" href="style.css">
 	</head>
 
-	<body>
+	<body id="body">
 		<div class="container_all">
 			<div class="header">
 				<div class="header_content">
