--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 					<img class="logo" src="img/logo.png">
 
 					<!--<a class="link l1" href="">Lien 1</a>-->
-					<a class="link l2" href="">Ma Boutique</a>
+					<!--<a class="link l2" href="">Ma Boutique</a>-->
 					<!--<a class="link l3" href="">Lien 3</a>-->
 
 					<a class="link lien_bouton" href="https://www.flaviedelaunay.fr/"><button class="b1">Mon Site</button></a>
@@ -68,34 +68,13 @@
 
 				-->
 
-				<div class="al">
-					<h2>Titre</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tincidunt ornare massa eget egestas purus. Suscipit tellus mauris a diam maecenas. Ac felis donec et odio pellentesque diam. Non tellus orci ac auctor augue mauris augue neque. Maecenas pharetra convallis posuere morbi leo urna molestie. Est ullamcorper eget nulla facilisi etiam. Turpis tincidunt id aliquet risus feugiat in ante. Et pharetra pharetra massa massa ultricies mi. Scelerisque mauris pellentesque pulvinar pellentesque habitant morbi.</p>
-				</div>
-
-				<div class="ac">
-					<h2>Titre</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tincidunt ornare massa eget egestas purus. Suscipit tellus mauris a diam maecenas. Ac felis donec et odio pellentesque diam. Non tellus orci ac auctor augue mauris augue neque. Maecenas pharetra convallis posuere morbi leo urna molestie. Est ullamcorper eget nulla facilisi etiam. Turpis tincidunt id aliquet risus feugiat in ante. Et pharetra pharetra massa massa ultricies mi. Scelerisque mauris pellentesque pulvinar pellentesque habitant morbi.</p>
-				</div>
-
-				<div class="ar">
-					<h2>Titre</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tincidunt ornare massa eget egestas purus. Suscipit tellus mauris a diam maecenas. Ac felis donec et odio pellentesque diam. Non tellus orci ac auctor augue mauris augue neque. Maecenas pharetra convallis posuere morbi leo urna molestie. Est ullamcorper eget nulla facilisi etiam. Turpis tincidunt id aliquet risus feugiat in ante. Et pharetra pharetra massa massa ultricies mi. Scelerisque mauris pellentesque pulvinar pellentesque habitant morbi.</p>
-				</div>
-
-				<div class="al">
-					<h2>Titre</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tincidunt ornare massa eget egestas purus. Suscipit tellus mauris a diam maecenas. Ac felis donec et odio pellentesque diam. Non tellus orci ac auctor augue mauris augue neque. Maecenas pharetra convallis posuere morbi leo urna molestie. Est ullamcorper eget nulla facilisi etiam. Turpis tincidunt id aliquet risus feugiat in ante. Et pharetra pharetra massa massa ultricies mi. Scelerisque mauris pellentesque pulvinar pellentesque habitant morbi.</p>
-				</div>
-
-				<div class="ac">
-					<h2>Titre</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tincidunt ornare massa eget egestas purus. Suscipit tellus mauris a diam maecenas. Ac felis donec et odio pellentesque diam. Non tellus orci ac auctor augue mauris augue neque. Maecenas pharetra convallis posuere morbi leo urna molestie. Est ullamcorper eget nulla facilisi etiam. Turpis tincidunt id aliquet risus feugiat in ante. Et pharetra pharetra massa massa ultricies mi. Scelerisque mauris pellentesque pulvinar pellentesque habitant morbi.</p>
-				</div>
-
-				<div class="ar">
-					<h2>Titre</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tincidunt ornare massa eget egestas purus. Suscipit tellus mauris a diam maecenas. Ac felis donec et odio pellentesque diam. Non tellus orci ac auctor augue mauris augue neque. Maecenas pharetra convallis posuere morbi leo urna molestie. Est ullamcorper eget nulla facilisi etiam. Turpis tincidunt id aliquet risus feugiat in ante. Et pharetra pharetra massa massa ultricies mi. Scelerisque mauris pellentesque pulvinar pellentesque habitant morbi.</p>
+				<div class="alcr">
+					<h2>Présentation</h2>
+					<p>Voilà c’est parti, nous sommes le 26 Mai 2021 et je lance enfin mon blog “VIVIROSE”. Pourquoi ce nom me direz-vous, la réponse est très simple, vivi est mon surnom et rose fait  référence à la lutte contre le Cancer. 
+					Ce blog est donc dédié à toutes les femmes atteintes du cancer du sein et je sais que vous êtes  nombreuses et j’en fait partie mais ça vous l’aviez bien compris. 
+					A travers ce blog vous pourrez découvrir des conseils et de bonnes astuces pour ne pas  sombrer mais plutôt pour vous aider à surmonter, à vous redonner la pêche quand le moral est  au plus bas et à rester positive. 
+					Avec mes 2 cancers croyez-moi j’ai de l’expérience et c’est que je souhaite vous apporter dans ce blog, transformer sa maladie en force. 
+					Alors à bientôt pour le premier article…</p>
 				</div>
 			</div>
 
