--- a/index.html
+++ b/index.html
@@ -4,40 +4,36 @@
 
 	<head>
 		<meta charset="utf-8">
-		<title></title>
+		<title>Blog Vivirose</title>
 		<link id="stylesheet" rel="stylesheet" href="style.css">
+		<link rel="icon" type="image/png" href="img/logo.png">
 	</head>
 
 	<body id="body">
-		<div class="container_all">
+
 			<div class="header">
-				<div class="header_content">
-
-					<img class="logo" src="img/logo.png">
-
-					<!--<a class="link l1" href="">Lien 1</a>-->
-					<!--<a class="link l2" href="">Ma Boutique</a>-->
-					<!--<a class="link l3" href="">Lien 3</a>-->
-
-					<a class="link lien_bouton" href="https://www.flaviedelaunay.fr/"><button class="b1">Mon Site</button></a>
-				</div>
-				
-				<div class="container_slider">
-					<div class="c1">
-					<h1 class="s1">Blog de Vivirose</h1>
+				<div class="c_1">
+					<div class="c_logo">
+						<img class="logo" src="img/logo.png">
+						<h3>Flavie Delaunay</h3>
 					</div>
-
-					<div class="c2">
-					<h1 class="s2">Accompagnement des femmes atteintes du cancer du sein</h1>
+					<svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-arrow-left-circle-fill" viewBox="0 0 16 16">
+  					<path d="M8 0a8 8 0 1 0 0 16A8 8 0 0 0 8 0zm3.5 7.5a.5.5 0 0 1 0 1H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5H11.5z"/>
+					</svg>
+				</div>
+				<div class="container_slider">
+					<div class="slide1">
+						<h1>Blog de Vivirose</h1>
+					</div>
+					<div class="slide2">
+						<h1>Accompagnement des femmes atteintes du cancer du sein</h1>
 					</div>
 				</div>
 			</div>
 
-
 			<div class="container_center">
-
 				<!--
-				<div class="a al">
+				<div>
 					<h2>Titre</h2>
 					<p>paragraphe (il est possible d'insérer un lien, une image ou une vidéo dans celui-ci)</p>
 				</div>
@@ -52,43 +48,31 @@
 
 				(pour la vidéo il faut, aller sur la bonne vidéo youtube, cliquer sur "partager" puis cliquer sur "intégrer"; récupérer le lien (https) et l'insérer dans la source de la balise "iframe")
 
-				vidéo : <iframe src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-				--------------------------------------------
-
-				Il existe 6 classes prédéfinie pour les div d'article:
-
-				class="al"(l'article occupe la colonne de gauche)
-				class="ac"(l'article occupe la colonne au centre)
-				class="ar"(l'article occupe la colonne de droite)
-
-				class="alc"(l'article occupe la colonne de gauche et la colonne au centre)
-				class="acr"(l'article occupe la colonne au centre et la colonne de droite)
-				class="alcr"(l'article occupe toute les colonnes)
+				vidéo : allez sur la vidéo Youtube de votre choix, cliquez sur "partager", sur "intégrer", copiez la balise "iframe" et retirez les valeurs "width: ;" et "height: ;" 
 
 				-->
-
-				<div class="alcr">
+				
+				<div>
 					<h2>Présentation</h2>
 					<p>Voilà c’est parti, nous sommes le 26 Mai 2021 et je lance enfin mon blog “VIVIROSE”. Pourquoi ce nom me direz-vous, la réponse est très simple, vivi est mon surnom et rose fait  référence à la lutte contre le Cancer. 
-					Ce blog est donc dédié à toutes les femmes atteintes du cancer du sein et je sais que vous êtes  nombreuses et j’en fait partie mais ça vous l’aviez bien compris. 
+					Ce blog est donc dédié à toutes les femmes atteintes du cancer du sein et je sais que vous êtes  nombreuses et j’en fait partie mais ça vous l’aviez bien compris.
 					A travers ce blog vous pourrez découvrir des conseils et de bonnes astuces pour ne pas  sombrer mais plutôt pour vous aider à surmonter, à vous redonner la pêche quand le moral est  au plus bas et à rester positive. 
 					Avec mes 2 cancers croyez-moi j’ai de l’expérience et c’est que je souhaite vous apporter dans ce blog, transformer sa maladie en force. 
 					Alors à bientôt pour le premier article…</p>
 				</div>
-			</div>
 
-			<div class="right_pannel">
-				<h3 class="h3"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-up-fill" viewBox="0 0 16 16">
-  				<path d="M7.247 4.86l-4.796 5.481c-.566.647-.106 1.659.753 1.659h9.592a1 1 0 0 0 .753-1.659l-4.796-5.48a1 1 0 0 0-1.506 0z"/>
-				</svg>Faire Défiler<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-down-fill" viewBox="0 0 16 16">
-  				<path d="M7.247 11.14L2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z"/>
-				</svg></h3>
+				<div>
+					<h2>Présentation</h2>
+					<p>Voilà c’est parti, nous sommes le 26 Mai 2021 et je lance enfin mon blog “VIVIROSE”. Pourquoi ce nom me direz-vous, la réponse est très simple, vivi est mon surnom et rose fait  référence à la lutte contre le Cancer. 
+					Ce blog est donc dédié à toutes les femmes atteintes du cancer du sein et je sais que vous êtes  nombreuses et j’en fait partie mais ça vous l’aviez bien compris.
+					A travers ce blog vous pourrez découvrir des conseils et de bonnes astuces pour ne pas  sombrer mais plutôt pour vous aider à surmonter, à vous redonner la pêche quand le moral est  au plus bas et à rester positive. 
+					Avec mes 2 cancers croyez-moi j’ai de l’expérience et c’est que je souhaite vous apporter dans ce blog, transformer sa maladie en force. 
+					Alors à bientôt pour le premier article…</p>
+				</div>
+
 			</div>
-		</div>
 
 		<script src="app.js"></script>
-
+		
 	</body>
-
 </html>
