--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 				(pour la vidéo il faut, aller sur la bonne vidéo youtube, cliquer sur "partager" puis cliquer sur "intégrer"; récupérer le lien (https) et l'insérer dans la source de la balise "iframe")
 
-				vidéo : allez sur la vidéo Youtube de votre choix, cliquez sur "partager", sur "intégrer", copiez la balise "iframe" et retirez les valeurs "width: ;" et "height: ;" 
+				vidéo : allez sur la vidéo Youtube de votre choix, cliquez sur "partager", sur "intégrer", copiez la balise "iframe" et collez la dans le code source" 
 
 				-->
 				
